--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
+BOT_TOKEN = "7773927598:AAGRm8rvaTrkUD5nOJGXqrMPaSyIz46sauY"                              # Require restart after changing it while bot running
 OWNER_ID = "7875474866"                               # Require restart after changing it while bot running
 TELEGRAM_API = "24986604"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "afda6f8e5493b9a5bc87656974f3c82e"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://ramarajubt02:fwtjR4tgQ1lwYPUl@cluster0.qsyz9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
