--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ TELEGRAM_HASH = "afda6f8e5493b9a5bc87656974f3c82e"                          # Re
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = "mongodb+srv://ramarajubt02:fwtjR4tgQ1lwYPUl@cluster0.qsyz9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://ramarajubt02:0E7hfly52CFLsiwo@cluster0.qsyz9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
